# kyoto

./: .Makefile.un~  .gitattributes  .gitignore  .travis.yml  Makefile  README.md  Vagrantfile  install.sh
arch/: PKGBUILD  kyoto.conf  service
debian/: conffiles  control  postinst  postrm  prerm
kyotocabinet/: Makefile.in  configure  configure.in  kccachedb.h  kccommon.h  kcdbext.h  kcplantdb.h  kcprotodb.h  kcthread.cc  myconf.h
kyotocabinet/doc/: command.html  index.html  index.ja.html  spex.html
kyotocabinet/doc/api/: annotated.html  classes.html  classkyotocabinet_1_1ArcfourCompressor-members.html  classkyotocabinet_1_1ArcfourCompressor.html  classkyotocabinet_1_1AtomicInt64-members.html  classkyotocabinet_1_1AtomicInt64.html  classkyotocabinet_1_1BasicDB-members.html  classkyotocabinet_1_1BasicDB.html  classkyotocabinet_1_1BasicDB_1_1Cursor-members.html  classkyotocabinet_1_1BasicDB_1_1Cursor.html  classkyotocabinet_1_1BasicDB_1_1Error-members.html  classkyotocabinet_1_1BasicDB_1_1Error.html  classkyotocabinet_1_1BasicDB_1_1FileProcessor-members.html  classkyotocabinet_1_1BasicDB_1_1FileProcessor.html  classkyotocabinet_1_1BasicDB_1_1Logger-members.html  classkyotocabinet_1_1BasicDB_1_1Logger.html  classkyotocabinet_1_1BasicDB_1_1MetaTrigger-members.html  classkyotocabinet_1_1BasicDB_1_1MetaTrigger.html  classkyotocabinet_1_1BasicDB_1_1ProgressChecker-members.html  classkyotocabinet_1_1BasicDB_1_1ProgressChecker.html  classkyotocabinet_1_1CacheDB-members.html  classkyotocabinet_1_1CacheDB.html  (+229 more)
kyotocabinet/example/: Makefile  kccacheex.cc  kcdirex.cc  kcforestex.cc  kcgrassex.cc  kchashex.cc  kclangcex.c  kcmrex.cc  kcpolyex.cc  kcprotoex.cc  kctreeex.cc  kcvisex.cc
kyotocabinet/lab/: codecheck  diffcheck  makevcdef  numbers.tsv  primelist  segvtest  stopwatch  vcmakecheck.bat
kyotocabinet/man/: htmltoman  kccachetest.1  kcdirmgr.1  kcdirtest.1  kcforestmgr.1  kcforesttest.1  kcgrasstest.1  kchashmgr.1  kchashtest.1  kclangctest.1  kcpolymgr.1  kcpolytest.1  kcprototest.1  kcstashtest.1  kctreemgr.1  kctreetest.1  kcutilmgr.1  kcutiltest.1
kyototycoon/: ChangeLog  Doxyfile  Makefile.in  README  cmdcommon.h  configure  configure.in  ktcommon.h  ktdbext.cc  ktdbext.h  kthttp.cc  kthttp.h  ktplugdb.cc  ktplugdb.h  ktplugdbvoid.cc  ktplugserv.cc  ktplugserv.h  ktplugservmemc.cc  ktremotedb.cc  ktremotedb.h  ktremotemgr.cc  ktremotetest.cc  ktreplmysql.rb  ktrpc.cc  ktrpc.h  ktserver.cc  ktshlib.cc  ktshlib.h  ktsocket.cc  ktsocket.h  ktthserv.cc  ktthserv.h  kttimeddb.cc  kttimeddb.h  kttimedmgr.cc  kttimedtest.cc  ktulog.cc  ktulog.h  ktutil.cc  ktutil.h  (+11 more)
kyototycoon/doc/: command.html  common.css  index.html  index.ja.html  spex.html
kyototycoon/doc/api/: annotated.html  classes.html  classkyototycoon_1_1HTTPClient-members.html  classkyototycoon_1_1HTTPClient.html  classkyototycoon_1_1HTTPServer-members.html  classkyototycoon_1_1HTTPServer.html  classkyototycoon_1_1HTTPServer_1_1Logger-members.html  classkyototycoon_1_1HTTPServer_1_1Logger.html  classkyototycoon_1_1HTTPServer_1_1Session-members.html  classkyototycoon_1_1HTTPServer_1_1Session.html  classkyototycoon_1_1HTTPServer_1_1Session_1_1Data-members.html  classkyototycoon_1_1HTTPServer_1_1Session_1_1Data.html  classkyototycoon_1_1HTTPServer_1_1Worker-members.html  classkyototycoon_1_1HTTPServer_1_1Worker.html  classkyototycoon_1_1MapReduce-members.html  classkyototycoon_1_1MapReduce.html  classkyototycoon_1_1MapReduce_1_1ReduceTaskQueue_1_1ReduceTask-members.html  classkyototycoon_1_1MapReduce_1_1ReduceTaskQueue_1_1ReduceTask.html  classkyototycoon_1_1MapReduce_1_1ValueIterator-members.html  classkyototycoon_1_1MapReduce_1_1ValueIterator.html  classkyototycoon_1_1PluggableDB-members.html  classkyototycoon_1_1PluggableDB.html  classkyototycoon_1_1PluggableServer-members.html  classkyototycoon_1_1PluggableServer.html  classkyototycoon_1_1Pollable-members.html  classkyototycoon_1_1Pollable.html  classkyototycoon_1_1Poller-members.html  classkyototycoon_1_1Poller.html  classkyototycoon_1_1RPCClient-members.html  classkyototycoon_1_1RPCClient.html  classkyototycoon_1_1RPCServer-members.html  classkyototycoon_1_1RPCServer.html  classkyototycoon_1_1RPCServer_1_1Logger-members.html  classkyototycoon_1_1RPCServer_1_1Logger.html  classkyototycoon_1_1RPCServer_1_1Session-members.html  classkyototycoon_1_1RPCServer_1_1Session.html  classkyototycoon_1_1RPCServer_1_1Session_1_1Data-members.html  classkyototycoon_1_1RPCServer_1_1Session_1_1Data.html  classkyototycoon_1_1RPCServer_1_1Worker-members.html  classkyototycoon_1_1RPCServer_1_1Worker.html  (+117 more)
kyototycoon/doc/luadoc/: index.html  luadoc.css
kyototycoon/doc/luadoc/modules/: kyototycoon.html
kyototycoon/example/: Makefile  kthttpex.cc  ktmemcex.rb  ktmemcfastex.pl  ktmemcmqex.rb  ktpollex.cc  ktremoteex.cc  ktreplmysql.rb  ktreplprint.rb  ktrestex.pl  ktrestex.py  ktrestex.rb  ktscrex.lua  ktscrjsonex.lua  ktscrtableex.lua  ktthservex.cc
kyototycoon/lab/: codecheck  dbbackup  docrefine.lua  ktdualtest  ktservctl  memo.txt
kyototycoon/lab/leveldb/: Makefile  ktplugdblevel.cc
kyototycoon/man/: ktremotemgr.1  ktremotetest.1  ktserver.1  kttimedmgr.1  kttimedtest.1  ktutilmgr.1  ktutilserv.1  ktutiltest.1
packaging/arch/: PKGBUILD  kyoto.conf  kyoto.install  kyoto.service
packaging/debian/: conffiles  control  kyoto-init.sh  postinst  prerm
packaging/redhat/: kyoto-init.sh  kyoto-tycoon-selinux.spec  kyoto-tycoon.spec  kyoto.service
packaging/scripts/: kyoto.conf  logrotate.conf
patches/: kyotocabinet-1.2.76-clang-cxx11.diff  kyotocabinet-1.2.76-gcc47-warnings.diff  kyotocabinet-1.2.76-gcc47.diff  kyotocabinet-1.2.76-getsysinfo.diff  kyotocabinet-1.2.76-march-native.diff  kyotocabinet-1.2.76-rpath-link.diff  kyototycoon-0.9.56-clang-getpid.diff  kyototycoon-0.9.56-gcc47-warnings.diff  kyototycoon-0.9.56-kqueue.diff  kyototycoon-0.9.56-luaver.diff
redhat/: kyoto-tycoon.spec
scripts/: kyoto.conf  lsb-init.sh  redhat-init.sh
selinux/: Makefile  README.md  kyoto.fc  kyoto.if  kyoto.te
vagrant/: provision-centos.sh  provision-debian.sh
(+6 files in other folders)
